applications/k8s/quakewatch-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: quakewatch-nodeport
  namespace: quakewatch
  labels:
    app: quakewatch
    service-type: nodeport
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: NodePort
  selector:
    app: quakewatch
  ports:
  - name: http
    port: 80
    targetPort: 5000
    nodePort: 30000
    protocol: TCP
  sessionAffinity: None
