applications/k8s/quakewatch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quakewatch-ingress
  namespace: quakewatch
  labels:
    app: quakewatch
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
  - host: quakewatch.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quakewatch
            port:
              number: 80
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quakewatch
            port:
              number: 80
